# scoring_model

./: .gitignore  LY_France_01_notebook_preprocessing_modelisation_112024.ipynb  LY_France_01_notebook_preprocessing_modelisation_122024.ipynb  LY_France_02_code_data_drift_112024.py  LY_France_04_Presentation.pptx  LY_France_04_Presentation_112024.pptx  README.md  app.py  dashboard.py  data_drift.py  eda.ipynb  eda_complementaire.ipynb  eda_feature_engineering.ipynb  eda_modelisation.ipynb  eda_modelisation_200features.ipynb  eda_notebook.ipynb  eda_preprocessing.ipynb  feature_engineering.ipynb  kaggle_lgbm_feature_engineering.py  main.py  model.pkl  model_LGBM.pkl  model_LGBM_Tuned.pkl  model_LGBM_Tuned_500cols.pkl  model_exploration.ipynb  model_selection.ipynb  model_train.py  preprocessing.ipynb  preprocessing.py  preprocessing_modelisation.ipynb  pyproject.toml  request.py  top_100_features.pkl
.github/workflows/: api_apitestscoring.yml  api_devapiscoringoc.yml  model_selection_apiscoringoc.yml  model_selection_devapiscoringoc.yml
draft/: eda_notebook.ipynb  model_exploration.ipynb  preprocessing_new.py  submission_kernel02.csv
notebooks/: export_df_top40_features.ipynb  kaggle_lgbm_feature_engineering.py
test/: unit_test.py
test/data/: data_test.csv
