[tool.poetry]
name = "scoring_model"
version = "0.1.0"
description = "Implémentation d'un outil de scoring de crédit pour calculer la probabilité qu'un client rembourse son crédit ou non."
authors = ["fly <111392306+flys-lf@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^2.17.2"
seaborn = "^0.13.2"
lightgbm = "^4.5.0"
statsmodels = "^0.14.4"
scipy = "^1.14.1"
nbconvert = "^7.16.4"
xgboost = "^2.1.3"
flask = "^3.1.0"
uvicorn = "^0.32.1"
fastapi = {extras = ["standard"], version = "^0.115.5"}
python-multipart = "^0.0.18"
streamlit = "^1.40.2"
shap = "^0.46.0"
imblearn = "^0.0"
pytest = "^8.3.4"
evidently = "0.2.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
